--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-input-form (userDataSubmit)="addUser($event)" />
-<app-output-table [dataUser]="dataUser" />
+<div>
+  <app-input-form (userDataSubmit)="addUser($event)" />
+  <app-output-table [dataUser]="dataUser" (userDeleted)="deleteUser($event)" />
+</div>
