--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,17 @@
 <p>{{ "jona" | uppercase }}</p>
 <p>{{ today | date }}</p>
 
-<ul>
+<button (click)="createUser()">button</button>
+
+<div *ngIf="!isLoading">
+  <div *ngFor="let item of dataUser">
+    {{ item.username }}
+  </div>
+</div>
+
+<div *ngIf="isLoading">loading...</div>
+
+<!-- <ul>
   <li *ngFor="let item of dataUser.address">
     {{ item.city }}
     <div [ngSwitch]="item.zone">
@@ -32,4 +42,4 @@
       <div *ngSwitchDefault>kuning</div>
     </div>
   </li>
-</ul>
+</ul> -->
