--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div>
-  <app-input-form (userDataSubmit)="addUser($event)" />
-  <app-output-table [dataUser]="dataUser" (userDeleted)="deleteUser($event)" />
-</div>
+<router-outlet/>
