--- a/src/app/output-table/output-table.component.scss
+++ b/src/app/output-table/output-table.component.scss
@@ -79,6 +79,7 @@ table {
   color: #888;
   font-style: italic;
   padding: 20px;
+  background-color: transparent;
 }
 
 .button-add {
@@ -117,4 +118,6 @@ table {
 
 .fullrow {
   width: 100%;
+  background-color: transparent;
+  color: white;
 }
