--- a/src/app/output-table/output-table.component.html
+++ b/src/app/output-table/output-table.component.html
@@ -42,7 +42,7 @@
         <input
           type="checkbox"
           [(ngModel)]="user.isChecked"
-          (change)="toggleStrikeThrough(user)"
+          (change)="updateUser(user.id, user)"
         />
       </td>
     </tr>
