red when date -3

--- a/src/app/output-table/output-table.component.html
+++ b/src/app/output-table/output-table.component.html
@@ -21,6 +21,7 @@
       *ngFor="let user of dataUser"
       [ngClass]="{
         strikethrough: user.isChecked,
+        highlight: isNearDeadline(user.paymentDeadline)
       }"
     >
       <td (click)="goToCreateForm(user.id)">{{ user.id }}</td>
