--- a/src/app/output-table/output-table.component.scss
+++ b/src/app/output-table/output-table.component.scss
@@ -9,7 +9,7 @@ $text-color: #333;
 $tbody-bg: #f9f9f9;
 
 .highlight {
-  background-color: red !important;
+  background-color: #8c0e0f !important;
   color: white;
 }
 
