--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,2 +1,2 @@
-<button (click)="onClick()">{{ buttonLabel }}</button>
-<p>ini data {{ dataForChild.name }}</p>
+
+<button (click)="logout()">log out</button>
