--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,1 @@
-<div class="shown" *ngIf="isShown; else shownFalse">muncul</div>
-<ng-template #shownFalse>
-  <div>muncul ketika else</div>
-</ng-template>
-<p>Default</p>
-<button (click)="onSubmit()">shown</button>
-
-<p>{{ "12" | currency : "IDR" }}</p>
-<p>{{ "jona" | reverse }}</p>
-<p>{{ "jona" | uppercase }}</p>
-<p>{{ today | date }}</p>
-
-<button (click)="createUser()">button</button>
-
-<div *ngIf="!isLoading">
-  <div *ngFor="let item of dataUser">
-    {{ item.username }}
-  </div>
-</div>
-
-<div *ngIf="isLoading">loading...</div>
-
-<!-- <ul>
-  <li *ngFor="let item of dataUser.address">
-    {{ item.city }}
-    <div [ngSwitch]="item.zone">
-      <div
-        *ngSwitchCase="1"
-        [ngStyle]="{ color: item.zone === 1 ? 'red' : 'yellow' }"
-      >
-        merah
-      </div>
-      <div *ngSwitchCase="2" [ngClass]="{ 'zone-safe': item.zone === 2 }">
-        biru
-      </div>
-      <div
-        *ngSwitchCase="3"
-        [ngClass]="item.zone === 3 ? 'zone-green' : 'zone-safe'"
-      >
-        hijau
-      </div>
-      <div *ngSwitchDefault>kuning</div>
-    </div>
-  </li>
-</ul> -->
+<router-outlet></router-outlet>
