--- a/src/app/input-form/input-form.component.scss
+++ b/src/app/input-form/input-form.component.scss
@@ -16,6 +16,7 @@ form {
   margin: 2rem auto;
   border-color: $input-border;
   border: 2px solid $input-border;
+  width: 100%;
 
   div {
     margin-bottom: 1rem;
